<resources>
    <string name="app_name">Kids Palace Nursery</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_Logout">Logout</string>
    <string name="menu_change_school">Change School</string>

</resources>
