<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:visible="false"
            android:id="@+id/nav_change_school"
            android:icon="@drawable/ic_school"
            android:title="@string/menu_change_school" />
        <item
            android:visible="true"
            android:id="@+id/nav_change_guardian"
            android:icon="@drawable/ic_guardian"
            android:title="@string/menu_guardian" />

        <item
            android:visible="true"
            android:id="@+id/nav_my_notification"
            android:icon="@drawable/ic_guardian"
            android:title="@string/menu_my_notification" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_change_password"
            android:title="@string/menu_change_password" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_Logout" />

    </group>

</menu>
